--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <p>Nº de peças</p>
-    <div id="number"></div>
-    <button id="incrementButton" onclick="increment()" >+</button>
+    <div id="number">0</div>
     <button id="decrementButton" onclick="decrement()" >-</button>
+    <button id="incrementButton" onclick="increment()" >+</button>
 </body>
 </html>
 
